--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
+    "nodemailer": "^6.9.15",
     "validator": "^13.12.0"
   },
   "devDependencies": {
